Changes to Obituary Filer in light of Rootsweb moves and Java.